--- a/Mealsplanner/app/src/main/res/layout/fragment_meal_by_ingredient.xml
+++ b/Mealsplanner/app/src/main/res/layout/fragment_meal_by_ingredient.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".meals_by_ingredient.view.MealByIngredientFragment">
+    tools:context=".filter_by_ingredient.view.FilterByIngredientFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
