--- a/Mealsplanner/app/src/main/res/layout/fragment_meal_search.xml
+++ b/Mealsplanner/app/src/main/res/layout/fragment_meal_search.xml
@@ -46,7 +46,7 @@
             android:text="Category"
             android:checked="true"
             android:textSize="17sp"
-            android:textColorHighlight="@color/appTheme"/>
+            app:buttonTint="@color/appTheme" />
 
         <RadioButton
             android:id="@+id/countryRadioButton2"
@@ -54,8 +54,7 @@
             android:layout_height="wrap_content"
             android:text="Country"
             android:textSize="17sp"
-            android:textColorHighlight="@color/appTheme"/>
-        <!--            android:buttonTint="@color/appTheme" -->
+            app:buttonTint="@color/appTheme" />
 
         <RadioButton
             android:id="@+id/ingredientRadioButton3"
@@ -63,7 +62,9 @@
             android:layout_height="wrap_content"
             android:text="Ingredient"
             android:textSize="17sp"
-            android:backgroundTint="@color/appTheme"/>
+            app:buttonTint="@color/appTheme" />
+
+
     </RadioGroup>
 
     <SearchView
